fixtures/runtime/invalid/division-by-zero.php
<?php
// phase4: kind=invalid expected_rust_status=runtime_error
echo 1 / 0;
